2006-05-17  Andrew Skiba <andrews@mainsoft.com>

	* nunitweb_config.xml: similar to almost_config.xml but ignores more stuff
	* NunitWebTest.cs: use nunit_config.xml and fallback on XmlException

2006-03-27  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* test_catalog.xml: fixed not working tests
	* almost_config.xml: fixed almost for not a bug
	* reference/HyperLinkColumn_DataTextField.aspx.xml,
	reference/HyperLinkColumn_DataNavigateUrlField.aspx.xml: removed refs
	of removed tests
	* reference/WebControl_CopyBaseAttributes_W.aspx.xml: same

2006-02-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* test_catalog.xml: fixed not working tests

2006-02-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added SystemWebTest.vmwcsproj, GH project file

2006-02-20  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* XmlComparer.cs: fixed AreEqualAttribs, to make attributes
	compare case insensitive